# course_work_05

./: .gitignore  README.md  main.py  pyproject.toml
classes/: class_DBManager.py
utils/: utils.py
