[tool.poetry]
name = "course-work-05"
version = "0.1.0"
description = ""
authors = ["glebskotnikov <skotnikov.nsk@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_05"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.7"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
